# rock-paper-scissors

./: CONTRIBUTING.md  FEATURES.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  merge-to-main.yml  pr-checks.yml  release.yml
src/rock_paper_scissors/: __init__.py  __main__.py  rock_paper_scissors.py
tests/: test_cli.py  test_rock_paper_scissors.py
